--- a/notebooks/feature_extraction.ipynb
+++ b/notebooks/feature_extraction.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "d3fc0e7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm\n",
+    "import sys\n",
+    "from pathlib import Path\n",
     "\n",
-    "from src.feature_extraction import wav_to_logmel\n"
+    "PROJECT_ROOT = Path.cwd().parent if Path.cwd().name == \"notebooks\" else Path.cwd()\n",
+    "sys.path.insert(0, str(PROJECT_ROOT))\n",
+    "\n",
+    "from src.feature_extraction import wav_to_features\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "0c03d3ed",
    "metadata": {},
    "outputs": [
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "46f235e3",
    "metadata": {},
    "outputs": [],
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "a4d27040",
    "metadata": {},
    "outputs": [
@@ -132,97 +134,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "2d7696f9",
+   "execution_count": 17,
+   "id": "94020f41",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2781/2781 [00:16<00:00, 167.64it/s]"
+      "100%|██████████| 2781/2781 [00:36<00:00, 76.64it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X shape: (2781, 128, 128, 1)\n",
-      "y shape: (2781,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "X shape: (2781, 128, 128, 2)\n",
+      "y shape: (2781,)\n",
+      "Saved: X.npy, y.npy, mean_std.json\n"
      ]
     }
    ],
    "source": [
-    "X = []\n",
-    "y = []\n",
+    "# wav_files and emotion_map already defined\n",
+    "X, y = [], []\n",
     "\n",
     "for wav_path in tqdm(wav_files):\n",
     "    filename = os.path.basename(wav_path)\n",
     "    emotion_code = int(filename.split(\"-\")[2])\n",
     "    label = emotion_map[emotion_code]\n",
     "\n",
-    "    mel = wav_to_logmel(wav_path)  # (128,128,1)\n",
-    "    X.append(mel)\n",
+    "    feat = wav_to_features(wav_path)  # (128,128,2)\n",
+    "    X.append(feat)\n",
     "    y.append(label)\n",
     "\n",
-    "X = np.array(X)\n",
-    "y = np.array(y)\n",
+    "X = np.array(X, dtype=np.float32)  # (N,128,128,2)\n",
+    "y = np.array(y, dtype=np.int64)\n",
     "\n",
     "print(\"X shape:\", X.shape)\n",
-    "print(\"y shape:\", y.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "28df975f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean: 0.12280687\n",
-      "Std: 0.21521616\n"
-     ]
-    }
-   ],
-   "source": [
-    "mean = X.mean()\n",
-    "std = X.std()\n",
+    "print(\"y shape:\", y.shape)\n",
     "\n",
-    "print(\"Mean:\", mean)\n",
-    "print(\"Std:\", std)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "4aab0d46",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved X.npy and y.npy\n"
-     ]
-    }
-   ],
-   "source": [
+    "# Dataset-level normalization (per channel)\n",
+    "mean = X.mean(axis=(0, 1, 2), keepdims=True)  # (1,1,1,2)\n",
+    "std  = X.std(axis=(0, 1, 2), keepdims=True) + 1e-6\n",
+    "\n",
     "X = (X - mean) / std\n",
     "\n",
-    "np.save(os.path.join(OUTPUT_DIR, \"X.npy\"), X)\n",
-    "np.save(os.path.join(OUTPUT_DIR, \"y.npy\"), y)\n",
+    "# Save mean/std for prediction consistency\n",
+    "stats = {\n",
+    "    \"mean\": mean.reshape(-1).tolist(),\n",
+    "    \"std\": std.reshape(-1).tolist()\n",
+    "}\n",
     "\n",
-    "print(\"Saved X.npy and y.npy\")\n"
+    "os.makedirs(\"notebooks/data\", exist_ok=True)\n",
+    "np.save(\"notebooks/data/X.npy\", X)\n",
+    "np.save(\"notebooks/data/y.npy\", y)\n",
+    "\n",
+    "import json\n",
+    "with open(\"notebooks/data/mean_std.json\", \"w\") as f:\n",
+    "    json.dump(stats, f)\n",
+    "\n",
+    "print(\"Saved: X.npy, y.npy, mean_std.json\")\n"
    ]
   }
  ],
